--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Valerii2022.github.io/dit_ok/",
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/dit_ok/",
