--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dit_ok",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://Valerii2022.github.io/dit_ok/",
