--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-select": "^5.8.0",
+    "redux-persist": "^6.0.0",
     "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
