--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nanoid": "^5.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
